[tool.poetry]
name = "dvc_fs"
version = "0.8.3"
description = "DVC API/filesystem utilities"
authors = ["Piotr Styczyński <piotrsty1@gmail.com>"]
readme = "README.md"
include = [
    { path = 'README.md', format = 'wheel' },
    { path = 'README.md', format = 'sdist' },
    "README.md",
    "pyproject.toml"
]

[tool.poetry.scripts]
publish = 'publish:publish'

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.14"
toml = "^0.10.2"
fs = "^2.4.13"
PyGithub = ">=1.50"
coverage = "^5.5"
semantic-version = "^2.9.0"
dvc = {extras = ["azure","s3"], version = "^2.10.2"}

[tool.poetry.extras]
dvc = ["s3","azure", "dvc>=2.0.18"]
fs = ["fs>=2.4.13"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-xdist = "^2.2.0"
isort = "^5.7.0"
black = "^20.8b1"
pydoc-markdown = "^3.9.0"
s3pypi = "^0.11.0"
flakehell = "0.9.0"
flake8 = "3.8.3"
poetry-publish = "^0.4.1"
bump2version = "^1.0.1"
gitchangelog = "^3.0.4"

[tool.poetry.plugins]

[tool.poetry.plugins."fs.opener"]
"dvc" = "dvc_fs.fs:DVCFSOpener"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flakehell]
exclude = ["README.rst", "README.md", ".venv"]
format = "colored"
max_line_length = 120
show_source = true
whitelist = "../../allowlist.txt"

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E203", "-W503"]
pyflakes = ["+*", "-E203"]
pylint = ["+*", "-E203"]

[build-system]
requires = ["poetry-core>=1.1.2a3"]
build-backend = "poetry.core.masonry.api"
